src/objects/GrantManagementSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings for Grant Management App</description>
    <fields>
        <fullName>Boolean_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id_Value__c</fullName>
        <label>Id Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>String_Value__c</fullName>
        <label>String Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Grant Management Settings</label>
</CustomObject>